# Studia

./: .gitignore  README.md
Semestr1/Python/: floodit.py  wprawka3.py
Semestr1/Python/Lista5/: zad1.py  zad2.py  zad3.py  zad4.py
Semestr1/Python/Lista6/: zad1.py  zad2.py  zad3.py
Semestr1/Python/graph/: main.py
Semestr1/Python/kol1/: kolokwia.tgz  zad.py
Semestr1/Python/lista1/: los.py  prog1.py  zad2.py  zad3.py  zad4.py
Semestr1/Python/lista10/: imiona.txt  imionanew.txt  zad2.py  zad3.py  zad4.py
Semestr1/Python/lista11/: szyfr.txt  szyfrogr.txt  zad2.py  zad3456.py
Semestr1/Python/lista12/: panTad.txt  zad2.py  zad3.py
Semestr1/Python/lista13/: zad2.py
Semestr1/Python/lista2/: zad1.py  zad2.py  zad3.py  zad4.py
Semestr1/Python/lista3/: zad1.py  zad2.py  zad3.py  zad4.py
Semestr1/Python/lista4/: zad1.py  zad2.py  zad3.py
Semestr1/Python/lista7/: plansza.txt  zad2.py  zad4.py  zad5.py
Semestr1/Python/lista8/: czerwone.txt  niebieskie.txt  program.pygo  pygo.py  zad1.py  zad2.py  zad3.py
Semestr1/Python/lista9/: Przedwiosnie.txt  spelnialna.py  zad1.py  zad2.py  zad3.py
Semestr1/WdI/Lista10/: mian.c
Semestr1/WdI/Lista11/: zad2.c
Semestr1/WdI/Lista9/: 5.py  ms.c  zad.cpp  zad2.c  zad4.py  zad5.c
Semestr1/WdI/kol/: zad.c
Semestr1/WdI/lista4/: test.c  zad1.c  zad2.c  zad3.c  zad3c.c  zad4.c  zad5.c  zad6.c
Semestr1/WdI/lista5/: zad1.c  zad2.c  zad3.c  zad4.c
Semestr2/PARO/TDD/bowling-master/: BowlingTDDProject.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  paro-tdd
Semestr5/kbk/: Wojciech_Balik.tar.bz2
(+762 files in other folders)
